--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "@react-pdf/renderer": "^4.3.1",
+    "@types/file-saver": "^2.0.7",
     "axios": "^1.13.2",
     "dotenv": "^17.2.3",
+    "file-saver": "^2.0.5",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "ms": "^2.1.3",
@@ -17,6 +20,7 @@
     "pg": "^8.16.3",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "to-words": "^4.9.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
