--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "ms": "^2.1.3",
-    "next": "16.0.3",
+    "next": "^16.0.10",
     "pg": "^8.16.3",
     "react": "19.2.0",
     "react-dom": "19.2.0",
