--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^17.2.3",
     "file-saver": "^2.0.5",
     "jsonwebtoken": "^9.0.2",
+    "jszip": "^3.10.1",
     "jwt-decode": "^4.0.0",
     "ms": "^2.1.3",
     "next": "^16.0.10",
